--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,8 @@
 ## Caffe
 
 # User's build configuration
-# Makefile.config
+Makefile.config
+matlab/demo/mytest.m
 
 # Data and models are either
 # 1. reference, and not casually committed
