--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@
 ## Caffe
 
 # User's build configuration
-Makefile.config
+# Makefile.config
 matlab/demo/mytest.m
 
 # Data and models are either
